# Dump

./: CMakeLists.txt  README.md
.github/workflows/: build-tinysa4.yml  checksum.yml  manual-build.yml  test.yml
Doom/: ccmd_list.md  ccmd_list.txt  header.h
Doom/decal_shift/: save9999.zds
Doom/disturbia_clip_issue/: disturbia_clip_issue.zds  readme.md
Doom/load_skipped_ticks/: save9999.zds
Doom/saves_g3.2.5/: save0.zds  save1.zds  save2.zds
Doom/skagway/: skagway.wad
Quake/: progs_hipnotic.txt  progs_id1.txt  progs_rogue.txt
Temp/: download.html
ZDoom/: header.h
ZDoom/skagway/: skagway.py  skagway.wad
hello-meson/: hello.c  meson.build
sdl_test/: .gitignore  CMakeLists.txt
src/: app.h  main.cpp
temp/src/: app.cpp
tests/: parse-fx3-img.py  readme.md  stdset.cpp
tests/datatables/: example.htm  example.js  hello.htm
tests/mpg123/: CMakeLists.txt  mpg123_test.c
tests/pypdf/: extract-images.py
tests/sdl2/: .gitignore  CMakeLists.txt  bmp.cpp
tests/serialport/: CMakeLists.txt
tests/sqlite/: CMakeLists.txt
tests/svgs/: readme.md
tests/unqlite/: CMakeLists.txt
unqlite_tests/: CMakeLists.txt
